# HANSEO_UAM_GCS

./: README.md
Tools/: gazebo_sitl_multiple_run.sh
Tools/sitl_gazebo/: CMakeLists.txt
Tools/sitl_gazebo/models/Apartment/: model.config  model.sdf
Tools/sitl_gazebo/models/Apartment/meshes/: Apartment.stl
Tools/sitl_gazebo/models/DS030W/: DS030W.sdf  model.config
Tools/sitl_gazebo/models/DS030W_CA/: DS030W_CA.sdf  model.config
Tools/sitl_gazebo/models/box_target_green/: model.sdf
Tools/sitl_gazebo/models/box_target_red/: model.sdf
Tools/sitl_gazebo/models/cloudship/: cloudship-gen.sdf
Tools/sitl_gazebo/models/iris/: iris.sdf  iris.sdf.jinja
Tools/sitl_gazebo/models/obstacle/: model.sdf
Tools/sitl_gazebo/worlds/: empty_v2.world  windy.world
launch/: ACUS_FCC_PILS.launch  DS030W_CA_sitl.launch  DS030W_sitl.launch  mavros_posix_sitl.launch  multi_uav_mavros_sitl.launch
logs/: Log_2022-10-28-23-54-56.csv
src/darknet_msg/: CMakeLists.txt  package.xml
src/darknet_msg/msg/: CNNDetection.msg  CNNDetectionList.msg
src/darknet_udp_bridge/: CMakeLists.txt  package.xml
src/darknet_udp_bridge/src/: darknet_udp_bridge_node.cpp  darknet_udp_bridge_node3.cpp
src/guidance/: CMakeLists.txt  package.xml
src/guidance/include/guidance/: guidance.h
src/guidance/src/: guidance.cpp  guidance2.cpp  guidance_node.cpp  guidance_node2.cpp  uav_status.cpp
src/kalmanfilter_pl/: CMakeLists.txt
src/kalmanfilter_pl/include/kalmanfilter_pl/: uav_status.h
src/kalmanfilter_pl/src/: kalmanfilter.cpp  kalmanfilter_pl_node.cpp  uav_status.cpp
(+3 files in other folders)
